[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Controls/SettingsTab.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Assets/Theme/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Controls/SideNavigationRail.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SellTransactionDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Controls/AddTransaction.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/SoldTransactionLogTab.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Controls/OpenFileDialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Controls/SaveFileDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Controls/ProfitTransactionTab.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Controls/ActiveTransactionsTab.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Controls/SplitTransactionDialog.tscn" type="PackedScene" id=12]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.192157, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideNavigationRail" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 600.0

[node name="TabsContainer" type="Control" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 952, 600 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TabsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 952, 600 )
custom_constants/margin_right = 16
custom_constants/margin_top = 0
custom_constants/margin_left = 16
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveTransactionsTab" parent="HBoxContainer/TabsContainer/MarginContainer" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 936.0
margin_bottom = 600.0

[node name="ProfitTransactionsTab" parent="HBoxContainer/TabsContainer/MarginContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 936.0
margin_bottom = 600.0

[node name="SoldTransactionLogTab" parent="HBoxContainer/TabsContainer/MarginContainer" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 936.0
margin_bottom = 600.0

[node name="SettingsTab" parent="HBoxContainer/TabsContainer/MarginContainer" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 936.0
margin_bottom = 600.0

[node name="AddActiveTransaction" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MarginContainer" parent="AddActiveTransaction/CenterContainer/DialogContainer" index="1"]
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="CenterContainer" parent="AddActiveTransaction/CenterContainer/DialogContainer/MarginContainer" index="0"]
margin_left = 24.0
margin_right = 396.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Title" parent="AddActiveTransaction/CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle/MarginContainer" index="0"]
text = "Add Active Transaction"

[node name="AddProfitTransaction" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MarginContainer" parent="AddProfitTransaction/CenterContainer/DialogContainer" index="1"]
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="CenterContainer" parent="AddProfitTransaction/CenterContainer/DialogContainer/MarginContainer" index="0"]
margin_left = 24.0
margin_right = 396.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Title" parent="AddProfitTransaction/CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle/MarginContainer" index="0"]
text = "Add Profit Transaction"

[node name="SellTransactionDialog" parent="." instance=ExtResource( 5 )]
visible = false

[node name="SplitTransactionDialog" parent="." instance=ExtResource( 12 )]
visible = false

[node name="OpenFileDialog" parent="." instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -355.0
margin_top = -218.0
margin_right = 355.0
margin_bottom = 218.0

[node name="SaveFileDialog" parent="." instance=ExtResource( 9 )]
[connection signal="ActiveTransClicked" from="HBoxContainer/SideNavigationRail" to="." method="_on_SideNavigationRail_ActiveTransClicked"]
[connection signal="LoadTransClicked" from="HBoxContainer/SideNavigationRail" to="." method="_on_SideNavigationRail_LoadTransClicked"]
[connection signal="ProfitTransClicked" from="HBoxContainer/SideNavigationRail" to="." method="_on_SideNavigationRail_ProfitTransClicked"]
[connection signal="SaveTrasnClicked" from="HBoxContainer/SideNavigationRail" to="." method="_on_SideNavigationRail_SaveTrasnClicked"]
[connection signal="SettingsClicked" from="HBoxContainer/SideNavigationRail" to="." method="_on_SideNavigationRail_SettingsClicked"]
[connection signal="SoldPositionsTransClicked" from="HBoxContainer/SideNavigationRail" to="." method="_on_SideNavigationRail_SoldPositionsTransClicked"]
[connection signal="AddTransactoinClick" from="HBoxContainer/TabsContainer/MarginContainer/ActiveTransactionsTab" to="." method="_on_ActiveTransactionsTab_AddTransactoinClick"]
[connection signal="SellTransactionClick" from="HBoxContainer/TabsContainer/MarginContainer/ActiveTransactionsTab" to="." method="_on_ActiveTransactionsTab_SellTransactionClick"]
[connection signal="SplitTransactionClick" from="HBoxContainer/TabsContainer/MarginContainer/ActiveTransactionsTab" to="." method="_on_ActiveTransactionsTab_SplitTransactionClick"]
[connection signal="AddTransactoinClick" from="HBoxContainer/TabsContainer/MarginContainer/ProfitTransactionsTab" to="." method="_on_ProfitTransactionTab_AddTransactoinClick"]
[connection signal="SellTransactionClick" from="HBoxContainer/TabsContainer/MarginContainer/ProfitTransactionsTab" to="." method="_on_ProfitTransactionTab_SellTransactionClick"]
[connection signal="AddNewTransaction" from="AddActiveTransaction" to="." method="_on_AddActiveTransaction_AddNewTransaction"]
[connection signal="AddNewTransaction" from="AddProfitTransaction" to="." method="_on_AddProfitTransaction_AddNewTransaction"]
[connection signal="AddSellTransaction" from="SellTransactionDialog" to="." method="_on_SellTransactionDialog_AddSellTransaction"]
[connection signal="SplitTransaction" from="SplitTransactionDialog" to="." method="_on_SplitTransactionDialog_SplitTransaction"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]

[editable path="AddActiveTransaction"]

[editable path="AddActiveTransaction/CenterContainer/DialogContainer"]

[editable path="AddActiveTransaction/CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle"]

[editable path="AddProfitTransaction"]

[editable path="AddProfitTransaction/CenterContainer/DialogContainer"]

[editable path="AddProfitTransaction/CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle"]
